# jrq

./: .clang-format  .clang-tidy  LICENSE  README.md  TODO.md  deserialize.c  jaq.c  json.c  json.h  language.md  meson.build  serialize.c  test.c  test_both.c  test_deserialize.c  test_serialize.c
src/: alloc.c  alloc.h  deserialize.c  errors.c  errors.h  eval.c  eval.h  eval_functions.c  eval_node.c  eval_private.c  eval_private.h  json.c  json.h  json_deserialize.c  json_iter.c  json_iter.h  json_serde.h  json_serialize.c  lexer.c  lexer.h  main.c  parser.c  parser.h  serialize.c  strings.c  strings.h  utils.c  utils.h  vector.h
src/eval/: eval.c  function_declarations.c  function_declarations.h  functions.c  functions.h  node.c  private.h
tests/: test.h  test_deserialize.c  test_serialize.c
tests/json/: both.c  iter.c  serde.c  serialize.c  test_both.c  test_deserialize.c  test_serialize.c
tests/lang/: eval.c  eval_simple.c  lexer.c  parser.c
